--- a/index.html
+++ b/index.html
@@ -170,20 +170,20 @@
         </script>
     </head>
     <body>
-        <div id="upper">
-            <div id="banner"></div>
+        <div id="upperz">
+            <div id="bannerz"></div>
         </div>
         <div id="lower">
             <div id="iconframe">
-                <img id="icon"></img>
+                <img id="iconz"></img>
             </div>
-            <div id="dataframe">
-                <div id="inviter">
-                    <span id="invitername"></span><span id="invitertag"></span>
+            <div id="dataframez">
+                <div id="inviterz">
+                    <span id="inviternamez"></span><span id="invitertagz"></span>
                 </div>
-                <div id="servername">Loading...</div>
-                <div id="counts">
-                    <span id="membercount"></span> <span id="onlinecount"></span> <span id="boostcount"></span>
+                <div id="servernamez">Loading...</div>
+                <div id="countsz">
+                    <span id="membercountz"></span> <span id="onlinecountz"></span> <span id="boostcountz"></span>
                 </div>
             </div>
         </div>
